[tool.poetry]
name = "dev-setup"
version = "0.1.0"
description = "Setup script for my personal development environment"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mdformat = "^0.7.13"
pre-commit = "^2.17.0"
gitlint = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
